Replaced deprecated constructor with call to factory.